...
                        .cornerRadius(10)
                }
                
                Spacer()
            }
            .padding()
            .navigationTitle("WearWallet Companion")
            .sheet(isPresented: Binding(
                get: { connectivityManager.showKeystoneScanner || showingScanner },
                set: { val in
                    if !val {
                        connectivityManager.showKeystoneScanner = false
                        showingScanner = false
...
